--- a/ejercicio11Test/ejercicio11Test.csproj
+++ b/ejercicio11Test/ejercicio11Test.csproj
@@ -45,13 +45,17 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="TermomixTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CocinaServiceTest.cs" />
+    <Compile Include="PesoServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ejercicio11\ejercicio11.csproj">
