--- a/ejercicio11/ejercicio11.csproj
+++ b/ejercicio11/ejercicio11.csproj
@@ -44,8 +44,10 @@
     <Compile Include="CocinaService.cs" />
     <Compile Include="ICocina.cs" />
     <Compile Include="IPeso.cs" />
+    <Compile Include="IReceta.cs" />
     <Compile Include="PesoService.cs" />
     <Compile Include="Plato.cs" />
+    <Compile Include="RecetaService.cs" />
     <Compile Include="Termomix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
