--- a/ejercicio11Test/ejercicio11Test.csproj
+++ b/ejercicio11Test/ejercicio11Test.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CocinaServiceTest.cs" />
     <Compile Include="PesoServiceTest.cs" />
+    <Compile Include="RecetaServiceTest.cs" />
+    <Compile Include="AlimentoTest.cs" />
+    <Compile Include="PlatoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ejercicio11\ejercicio11.csproj">
