--- a/ejercicio11/ejercicio11.csproj
+++ b/ejercicio11/ejercicio11.csproj
@@ -45,8 +45,12 @@
     <Compile Include="ICocina.cs" />
     <Compile Include="IPeso.cs" />
     <Compile Include="IReceta.cs" />
+    <Compile Include="IRecetaService.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="PesoService.cs" />
     <Compile Include="Plato.cs" />
+    <Compile Include="RecetaRepository.cs" />
+    <Compile Include="Receta.cs" />
     <Compile Include="RecetaService.cs" />
     <Compile Include="Termomix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
